force-app/main/default/objects/B25__Recurring_Reservation__c/B25__Recurring_Reservation__c.object-meta.xml
<CustomObject>
    <description>Allows and gives options to create Recurring Reservations.</description>
    <label>Recurring Reservation</label>
    <nameField>
        <displayFormat>RR-{000000}</displayFormat>
        <label>Recurring Reservation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>