force-app/main/default/objects/B25__Recurring_Reservation__c/fields/B25__Day_Of_The_Month_Indicator__c.field-meta.xml
<CustomField>
    <fullName>B25__Day_Of_The_Month_Indicator__c</fullName>
    <description>Used to set Recurring Reservations on every Nth day of the month. Example: Every second Monday.</description>
    <inlineHelpText>Utilisé pour définir des réservations récurrentes tous les Nièmes jours du mois. Exemple : un lundi sur deux.</inlineHelpText>
    <label>Day Of The Month Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1st</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2nd</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3rd</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4th</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>last</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>