force-app/main/default/objects/B25__Recurring_Reservation__c/fields/B25__End_Condition__c.field-meta.xml
<CustomField>
    <fullName>B25__End_Condition__c</fullName>
    <description>The Recurring Reservations will end when reaching an end date, or when reaching a certain number of Reservations.</description>
    <inlineHelpText>Les réservations récurrentes prennent fin lorsqu’elles atteignent une date de fin, ou lorsqu’elles atteignent un certain nombre de réservations.</inlineHelpText>
    <label>End Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>END_DATE</fullName>
                <label>end date</label>
            </value>
            <value>
                <fullName>NUMBER_OF_RESERVATIONS</fullName>
                <label>number of reservations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>