force-app/main/default/objects/B25__Recurring_Reservation__c/fields/B25__End_Date__c.field-meta.xml
<CustomField>
    <fullName>B25__End_Date__c</fullName>
    <description>The End Date on which the Recurring Reservations will stop.</description>
    <inlineHelpText>La date de fin à laquelle les réservations récurrentes s’arrêteront.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>