force-app/main/default/objects/B25__Recurring_Reservation__c/fields/B25__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>B25__Job_Id__c</fullName>
    <description>The current job id of the queueable updating this recurring reservation</description>
    <inlineHelpText>L’identifiant actuel du travail de la file d’attente qui actualise cette réservation récurrente</inlineHelpText>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>