force-app/main/default/objects/B25__Recurring_Reservation__c/fields/B25__Monthly_Recurrence__c.field-meta.xml
<CustomField>
    <fullName>B25__Monthly_Recurrence__c</fullName>
    <label>Monthly Recurrence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Every 1st</fullName>
            </value>
            <value>
                <fullName>Every 2nd</fullName>
            </value>
            <value>
                <fullName>Every 3rd</fullName>
            </value>
            <value>
                <fullName>Every 4th</fullName>
            </value>
            <value>
                <fullName>Every 5th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>