force-app/main/default/objects/B25__Recurring_Reservation__c/fields/B25__Nth_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Nth_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Needed to differentiate between the two types of yearly and monthly Recurring Reservations.</description>
    <label>Nth Type</label>
    <type>Checkbox</type>
</CustomField>