force-app/main/default/objects/B25__Recurring_Reservation__c/fields/B25__Number_Of_Reservations__c.field-meta.xml
<CustomField>
    <fullName>B25__Number_Of_Reservations__c</fullName>
    <description>The number of Reservations that will be made before the Recurring Reservations will end.</description>
    <inlineHelpText>Le nombre de réservations qui seront effectuées avant que les réservations récurrentes ne prennent fin.</inlineHelpText>
    <label>Number Of Reservations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>