force-app/main/default/objects/B25__Recurring_Reservation__c/fields/B25__Recurrence_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Recurrence_Type__c</fullName>
    <description>The time interval for this Recurring Reservation.</description>
    <inlineHelpText>L’intervalle de temps pour cette réservation récurrente.</inlineHelpText>
    <label>Recurrence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAILY</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
            <value>
                <fullName>WEEKLY</fullName>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>MONTHLY</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>YEARLY</fullName>
                <label>Yearly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>