force-app/main/default/objects/B25__Recurring_Reservation__c/fields/B25__Repeat_Interval__c.field-meta.xml
<CustomField>
    <fullName>B25__Repeat_Interval__c</fullName>
    <description>The interval between repeats of this Recurring Reservation. The unit this is in can be seen in Repeat Type</description>
    <inlineHelpText>L’intervalle entre les répétitions de cette réservation récurrente.</inlineHelpText>
    <label>Repeat Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>