force-app/main/default/objects/B25__Recurring_Reservation__c/fields/B25__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>B25__Start_Date__c</fullName>
    <description>The starting date of the Recurring Reservations.</description>
    <inlineHelpText>La date de début des réservations récurrentes.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>