force-app/main/default/objects/B25__Recurring_Reservation__c/fields/B25__Weekly_Recurrence__c.field-meta.xml
<CustomField>
    <fullName>B25__Weekly_Recurrence__c</fullName>
    <description>On which day of the week should a weekly Reservation be created?</description>
    <inlineHelpText>Quel jour de la semaine faut-il créer une réservation hebdomadaire ?</inlineHelpText>
    <label>Weekly Recurrence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>